{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "ade1f90b-6835-41e7-b889-61ec55e4a2ea",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "30df6593-1317-4508-99ee-00ed6abca1b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "a2882ed7-315b-4e75-8049-89638d038efd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "2735c5a7-31f4-42e3-b2db-ba83bf8b4451",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PlaceTrap",
                    "type": "Button",
                    "id": "0f758cfc-d4f9-4f4f-afe0-9c8ef2d537b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShootArrow",
                    "type": "Button",
                    "id": "da24ed9a-d997-4bf3-9133-f9f711a69768",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePoint",
                    "type": "Value",
                    "id": "1855275b-a413-46bb-86df-d38d7c111f30",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "1beeb672-a0bf-45d2-a3c8-2dbc6e657568",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CancelArrow",
                    "type": "Button",
                    "id": "975ff4be-615a-4496-baa8-eafb6728cb1e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "161e597b-7c59-4f04-aa23-9afebb9794df",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bf0a53f9-070b-4dc4-90a6-62b2f4ab175a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8caadc17-1f98-46a5-bc10-677d7a250b2d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "04e9a912-1087-464a-8803-51a414c012f9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f7337c01-e1d9-474e-8091-39966e6fca9f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ArrowKeys",
                    "id": "576550b6-869b-4ddd-bed0-9ef293ec1783",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "435be308-d79d-4242-adfc-3c2d9d79859b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5fb2637b-fdb1-442f-828e-413bcc6ef5fd",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "520e3e28-eb2a-4acf-a87f-c1b1fbdacc6c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4d5a0e44-08c5-4efa-b083-3fa876e97c73",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "180b32bf-0177-4381-bee0-de25c73add4c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "393ca038-910e-4334-b5bf-4fe7daa8ae3a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "edb29882-9b2f-4e97-967e-eb70c0ea043a",
                    "path": "<Keyboard>/#(e)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "PlaceTrap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45909a40-ac96-4768-a5c7-cbbe13df1391",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ShootArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4eca385-fcda-4d1d-b58c-adce63086909",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MousePoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31f2f5c9-a48a-44fd-bce3-a269284b82d4",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce29fec5-4c6f-41c1-bf42-355eb2b50fbc",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aa7401c-05ed-4ae9-9482-cff68a18e266",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ec6474-5ea6-4df9-8a10-0d5c81f854d0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db391e67-f366-4561-9ac7-0519e8abc0f8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "CancelArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}